# retail_store_customer_segmentation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA.ipynb  data_preprocessing_and_feature_engineering.ipynb
src/: dataset.py
